Add booktabs, tabularx, and geometry packages
Added packages for improved table formatting and page layout.

--- a/D5/main.tex
+++ b/D5/main.tex
@@ -22,7 +22,10 @@
 \usepackage{colortbl}
 \usepackage{pgfgantt}
 \usepackage{parskip}
-
+% Añadidos por Michel
+\usepackage{booktabs}  
+\usepackage{tabularx} 
+\usepackage{geometry}  
 
 % Page geometry
 \geometry{
