--- a/D5/association.tex
+++ b/D5/association.tex
@@ -112,7 +112,7 @@ Visually, we can see these rules through these plots:
     \includegraphics[width=0.48\textwidth]{Images/LiftXSuport1.png}
     \hfill
     \includegraphics[width=0.48\textwidth]{Images/LiftXSuport2.png}
-    \caption{Scatter plot NOMBRE PROVISIONAL}
+    \caption{Scatter plots of Lift vs Support for association rules}
 \end{figure}
 
 From these results, we can clearly observe that both the lift and the confidence align with the expected outcomes. We see that most associations with high lift and high confidence have a very small support, which makes sense since these types of customers form a very small group of people.
@@ -142,7 +142,7 @@ The conjunction of these rules reveals the characteristics of the perfect custom
 
 \item \textbf{Life Cycle Dimension:} The perfect customer is notable for the absence of dependent children, marked by \verb|Teenhome = 0| and \verb|HasChildren = No|, which frees up their disposable income.
 
-\item \textbf{Demographic Dimension:}The perfect customer is single and has a high level of education, indicated by \verb|Education = Graduation| and \verb|MaritalSts = Single|.
+\item \textbf{Demographic Dimension:} The perfect customer is single and has a high level of education, indicated by \verb|Education = Graduation| and \verb|MaritalSts = Single|.
 \end{enumerate}
 
 Finally, we take a look at the top 10 rules with the best lift and the graph to confirm this.
@@ -151,14 +151,11 @@ Finally, we take a look at the top 10 rules with the best lift and the graph to 
     \centering
     \caption{Top 10 Additional Association Rules for \textbf{Response = Yes}}
     \label{tab:reglas_apriori_grid_2}
-    \footnotesize % Fuente un poco más pequeña
+    \footnotesize
     
-    % Aumentamos el espacio entre filas para que no se vea pegado a las líneas
     \renewcommand{\arraystretch}{1.3}
     
-    % Definición de columnas con líneas verticales (|)
-    % c: centrada, X: se ajusta al ancho
-    \begin{tabularx}{\textwidth}{|c|X|c|c|c|c|}
+    \begin{tabular}{|c|p{7cm}|c|c|c|c|}
         \hline
         \textbf{\#} & \textbf{Antecedent (LHS)} & \textbf{Supp.} & \textbf{Conf.} & \textbf{Lift} & \textbf{Count} \\
         \hline
@@ -192,50 +189,49 @@ Finally, we take a look at the top 10 rules with the best lift and the graph to 
           
         10 & \{Education=Graduation, MaritalSts=Single, Teenhome=0, HasChildren=No, WineSegment=Wine\_High\} 
            & 0.014 & 0.622 & 4.06 & 28 \\ \hline
-           
-    \end{tabularx}
+    \end{tabular}
 \end{table}
 
-\includegraphics[width=1.0\textwidth]{Images/Grafo.png}
-
-Nota: para mejor visualización consultar el .html
-CAMBIAR FOTO
-
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{Images/Grafo.png}
+    \caption{Graph visualization of top association rules}
+\end{figure}
 
 In this way, we have been able to identify which association rules allow us to improve our future marketing campaigns. To explain this clearly, we have divided them into two categories based on their importance.
 
-DECIR QUE AUMENTAN EN X4
+The identified rules demonstrate a fourfold increase in campaign acceptance rates compared to the baseline.
+
 \begin{enumerate}
-\item \textbf{Variables comunes:} Independientemente del perfil, hay dos condiciones innegociables que aparecen en todas las reglas del top.
+\item \textbf{Common variables:} Regardless of the profile, there are two non-negotiable conditions that appear in all top rules.
 
-En primer lugar, que no tenga hijos \textbf{(Teenhome = 0 or HasChildren = No)}, es decir, que la campaña solo funciona si el cliente no tiene la presión económica o el tiempo que suponen los hijos/adolescentes.
+First, the customer must not have children \textbf{(Teenhome = 0 or HasChildren = No)}, meaning that the campaign only works if the customer does not have the economic pressure or time constraints that children/teenagers impose.
 
-En segundo lugar, que posea un alto valor económico. Ya sea a través de \textbf{IncomeSegment=High o WineSegment=Wine_High}, el cliente debe tener capacidad de gasto.
+Second, the customer must possess high economic value. Whether through \textbf{IncomeSegment=High or WineSegment=Wine\_High}, the customer must have spending capacity.
 
-\item \textbf{Arquetipos}: A partir de aquí las reglas se dividen, lo que nos permite identificar dos arquetipos de cliente:
+\item \textbf{Archetypes:} From here the rules diverge, which allows us to identify two customer archetypes:
 \begin{itemize}   
-        \item \textbf{Soltero de Alto Potencial de Gasto Discrecional:}
-        Este arquetipo se ve reflejado en las reglas {1, 2, 3, 6, 9, 10} y se caracteriza por estar soltero, tener un alto nivel de estudios y por su facildad de gastar dinero en vino. Para este perfil, el comportamiento de gasto (Wine\_High) es más importante que el ingreso teórico. 
+        \item \textbf{Single with High Discretionary Spending Potential:}
+        This archetype is reflected in rules 1, 2, 3, 6, 9, and 10 and is characterized by being single, having a high level of education, and demonstrating a propensity to spend money on wine. For this profile, spending behavior (Wine\_High) is more important than theoretical income. 
         
-        Según nuestros resultados, un soltero graduado que gasta mucho en vino es un cliente "top", aunque su nómina no esté clasificada necesariamente como "High". Su comportamiento valida su valor.
-\end{itemize}
-\begin{itemize}   
-        \item \textbf{El Comprador Digital Acomodado:}
-        Este arquetipo se ve reflejado en las reglas {Reglas 4, 5, 7, 8} y se caracteriza por la ausencia de hijos, su alto nivel de ingresos y su preferencia a comprar mediante pedidos web. A diferencia del arquetipo anterior, no influye si el cliente està soltero o graduado.
+        According to our results, a single graduate who spends heavily on wine is a "top" customer, even if their salary is not necessarily classified as "High". Their behavior validates their value.
         
-        En conclusión, si el cliente tiene ingresos altos, no tiene hijos y prefiere comprar por la Web, aceptará la campaña aunque esté casado o tenga otro nivel educativo. El canal digital es su habilitador.
+        \item \textbf{The Affluent Digital Buyer:}
+        This archetype is reflected in rules 4, 5, 7, and 8 and is characterized by the absence of children, high income level, and a preference for purchasing through web orders. Unlike the previous archetype, it does not matter if the customer is single or a graduate.
+        
+        In conclusion, if the customer has high income, no children, and prefers to shop online, they will accept the campaign even if they are married or have a different education level. The digital channel is their enabler.
 \end{itemize}
 \end{enumerate}
 
-\subsection{Conclusiones de estrategias recomendadas}
-Basadonos en nuestro análisis, nuestra recomendación no es hacer una sola campaña, sino una estrategia bifurcada:
+\subsection{Recommended Strategy Conclusions}
+Based on our analysis, our recommendation is not to create a single campaign, but rather a bifurcated strategy:
 
 \begin{enumerate}
-
-    \item \textbf{Estrategia 1:}
-    Esta estrategia tendrá como objetivo a los clientes del primer arquetipo. La finalidad es apuntar a los clientes con mayor gasto en vino con un mensaje que denote exclusividad, recompensa personal y estilo de vida gourmet. 
-    \item \textbf{Estrategia 2:}
-    Esta estrategia tendrá como objetivo a los clientes del segundo arquetipo. Para ello nos centraremos en su canall de preferencia (web), en donde les ofreceremos recomendaciones fáciles, de acceso directo y con productos exclusivos a un clic.
+    \item \textbf{Strategy 1:}
+    This strategy will target customers from the first archetype. The goal is to appeal to customers with the highest wine spending with a message that conveys exclusivity, personal reward, and a gourmet lifestyle. 
+    
+    \item \textbf{Strategy 2:}
+    This strategy will target customers from the second archetype. To do this, we will focus on their preferred channel (web), where we will offer easy recommendations, direct access, and exclusive products just one click away.
 \end{enumerate}
 
-De esta forma, enfocandonos en estos clientes, tan valiosos podremos incrementar el porcentage de personas que acepten una futura campaña.
+By focusing on these valuable customers, we can increase the percentage of people who accept a future campaign.
